--- a/OilCanningSilverLightToHtml5Js/OilCanningSilverLightToHtml5Js/App.xaml
+++ b/OilCanningSilverLightToHtml5Js/OilCanningSilverLightToHtml5Js/App.xaml
@@ -1,4 +1,18 @@
-﻿<Application
+﻿<!--<Application xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:ed="http://schemas.microsoft.com/expression/2010/drawing"
+             xmlns:toolkit="clr-namespace:System.Windows.Controls.DataVisualization.Charting;assembly=System.Windows.Controls.DataVisualization.Toolkit"
+             x:Class="OilCanningSilverLightToHtml5Js.App"
+             >
+    <Application.Resources>
+        <Style x:Key="noAxis" TargetType="toolkit:AxisLabel">
+            <Setter Property="Visibility" Value="Collapsed"/>
+        </Style>
+    </Application.Resources>
+</Application>-->
+    
+<Application
     x:Class="OilCanningSilverLightToHtml5Js.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
